# VerTX

./: .clippy.toml  .devcontainer.json  .dprint.json  .gitattributes  .gitconfig  .gitignore  .justfile  .justfile.base  .tool-versions  .typos.toml  Cargo.toml  README.md  Taskfile.dist.yaml  Taskfile.yaml  biome.json  biome.jsonc  bun.lockb  bunfig.toml  flake.nix  icons.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  rustfmt.toml  tsconfig.bun.json  wrun-project.toml
.cargo/: config.toml
.config/: biome.json  chip2target.json  chips.json  dprint.json  env  mise.toml  toolchains.json  tsconfig.bun.json  tsconfig.node.json  versions.json  xtensa-toolchain  xtensa-toolchain.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml  galock.toml  renovate.json
mixer2json/: Taskfile.yaml  gleam.toml
postcard-ts/: Taskfile.yaml  biome.json  index.ts  package.json  tsconfig.json  wrun.toml
scripts/: Taskfile.yaml  biome-bun.sh  biome.json  build-simulator.ts  build-target.ts  check-targets.ts  csp-nonce.ts  fetch-rust.ts  package.json  set-ra-config.ts  set-ra-features.ts  set-target.ts  splash-convert.ts  sync-mise.ts  sync-toolchains.ts  target-common.ts  target-schema.ts  tsconfig.json  update.ts  utils.ts  wasm-rename.ts
targets/: devkit-esp32s3.json  devkit-esp32s3.toml  devkit-rp-pico.toml  devkit-stm32f407vg.toml  esp32s3-devkit.toml  jumper-t20.toml
vertx/: .justfile  Cargo.toml  Taskfile.yaml  build.rs  partitions.csv  wrun.toml
vertx-api/: .justfile  Cargo.toml
vertx-api/examples/: dev-server.rs
vertx-api/src/: lib.rs  protocol.rs
vertx-backpack/: Cargo.toml  Taskfile.yaml  build.rs
vertx-backpack-ipc/: Cargo.toml  README.md
vertx-backpack-ipc/src/: lib.rs
vertx-backpack/src/: api.rs  ipc.rs  main.rs  network.rs
vertx-config/: Cargo.toml  Taskfile.yaml  biome.json  biome.jsonc  config.old.ts  config.ts  generate.ts  package.json  tsconfig.json  types.ts  wrun.toml
vertx-config-macros/: .justfile  Cargo.toml
vertx-config-macros/src/: lib.rs
vertx-config-migrate/: Cargo.toml  Taskfile.yaml  biome.json  migrate.ts  package.json  tsconfig.json  tsconfig.jsonc  wrun.toml
vertx-config-migrate/src/: lib.rs
vertx-config/src/: boot_snapshot.rs  generate.ts  impls.rs  lib.rs  minmax.rs  reactive.rs  rust.ts  types.ts  typescript.ts  update.rs  utilities.ts
vertx-config/src/storage/: mod.rs  postcard.rs
vertx-configurator/: .gitignore  .justfile  README.md  Taskfile.yaml  astro.config.ts  biome.json  build.ts  bun.lockb  bunfig.toml  compress.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.bun.json  tsconfig.json  tsconfig.node.json  vite.config.ts  wrun.toml
vertx-crsf/: .justfile  Cargo.toml  Taskfile.yaml  wrun.toml
vertx-filesystem/: Cargo.toml  wrun.toml
vertx-filesystem/src/: block.rs  buffer.rs  error.rs  file.rs  header.rs  lib.rs  mock.rs
vertx-mix-parse/: .gitignore  Taskfile.yaml  gleam.toml  manifest.toml
vertx-network/: Cargo.toml  Taskfile.yaml
vertx-network-esp/: Cargo.toml  Taskfile.yaml
vertx-network-esp/src/: driver.rs  lib.rs
vertx-network-hal/: Cargo.toml
vertx-network/src/: api.rs  lib.rs
vertx-server/: Cargo.toml  build.rs
vertx-server/src/: lib.rs
vertx-server/src/configurator/: api.rs  mod.rs
vertx-server/src/http/: api.rs  configurator.rs  mod.rs  respond.rs  router.rs
vertx-simulator/: Cargo.toml  Taskfile.yaml  biome.json  biome.jsonc  index.html  package.json  tsconfig.json  vite.config.ts  wrun.toml
vertx-simulator-ipc/: Cargo.toml
vertx-simulator/src/: backpack-ipc.ts  backpack.rs  child.rs  common.ts  main.rs  main.ts  reset.css  simulator.ts  style.css  ui.ts  uint8array.d.ts  utils.ts
vertx-simulator/src/backpack/: mod.rs  network.rs
vertx-simulator/src/ui/: log_view.rs  mod.rs
vertx-target/: Cargo.toml
vertx-target/src/: lib.rs  nanojson.rs
vertx/.cargo/: config.toml
vertx/src/: api.rs  backpack.rs  build_info.rs  config.rs  configurator.rs  crsf.rs  display.rs  elrs.rs  executor.rs  flash.rs  init_counter.rs  leds.rs  lib.rs  main.rs  mode.rs  models.rs  mutex.rs  network.rs  ota.rs  reset.rs  storage.rs  utils.rs  wifi.rs
vertx/src/api/: mod.rs  protocol.rs
vertx/src/configurator/: api.rs  mod.rs  protocol.rs  server.rs  wifi.rs
vertx/src/configurator/api/: mod.rs  protocol.rs
vertx/src/hal/: hosted.rs  implementation.rs  mod.rs  simulator.rs
vertx/src/hal/chip/: mod.rs  stm32.rs  test.rs
vertx/src/hal/chip/esp/: flash.rs  leds.rs  mod.rs  network.rs  ui.rs  wifi.rs  ws2812.rs
vertx/src/hal/chip/rp/: leds.rs  mod.rs  ui.rs  ws2812.rs
vertx/src/hal/chip/simulator/: configurator.rs  mod.rs  storage.rs  ui.rs
vertx/src/hal/chip/stm32/: leds.rs  mod.rs
vertx/src/hal/display/: mod.rs  sh1106.rs  ssd1306.rs
vertx/src/hal/esp/: flash.rs  leds.rs  mod.rs  network.rs  network_driver.rs  peripherals.rs  wifi.rs
vertx/src/hal/esp32/: flash.rs  mod.rs  wifi.rs
vertx/src/hal/rp/: leds.rs  mod.rs
vertx/src/hal/simulator/: backpack.rs  configurator.rs  mod.rs  storage.rs
vertx/src/network/: dhcp.rs  driver.rs  mod.rs  wifi.rs
vertx/src/network/http/: api.rs  buffer.rs  configurator.rs  mod.rs  respond.rs
vertx/src/storage/: mod.rs  sd.rs  sd_spi.rs
vertx/src/ui/: history.rs  mod.rs  splash.rs
vertx/src/ui/component/: list.rs  mod.rs  qr_code.rs  scrolling.rs
vertx/src/ui/view/: about.rs  menu.rs  mod.rs  model.rs
vertx/src/usb/: mod.rs  ncm_cdc.rs
vertx/targets/: devkit.json
vhs/: .justfile  Cargo.toml  build.rs  partitions.csv
vhs-api/: .justfile  Cargo.toml
vhs-api/examples/: dev-server.rs
vhs-api/src/: lib.rs  protocol.rs
vhs-crsf/: .justfile  Cargo.toml
vhs-server/: .justfile  Cargo.toml  build.rs
vhs-server/src/: api.rs  lib.rs  web_sockets.rs
vhs-ulp/: .justfile
vhs-web/: .justfile  (+10 more)
vhs/.cargo/: config.toml
vhs/src/: config.rs  crsf.rs  flash.rs  leds.rs  main.rs  mode.rs  mutex.rs  ota.rs  server.rs  status.rs  wifi.rs
vhs/src/configurator/: server.rs  wifi.rs
vhs/src/server/: mod.rs
vhs/src/server/api/: mod.rs  protocol.rs
vhs/targets/: devkit.json
(+125 files in other folders)
