[workspace]
resolver = "3"
members = [
    "vertx",
    "vertx-config-migrate",
    "vertx-crsf",
]

[workspace.package]
version = "0.0.0"
authors = ["W Etheredge <me@wetheredge.com>"]
edition = "2024"
homepage = "https://vertx.cc"
license = "MPL-2.0"

[workspace.dependencies]
heapless = "=0.8.0"
loog = { git = "https://github.com/wetheredge/loog.git", rev = "4785bb8f607191354e7d3d9df8790fe998392cbc" }
postcard = { version = "=1.1.1", default-features = false }
serde = { version = "=1.0.218", default-features = false }

[workspace.metadata.bin-dependencies]
cargo-machete = "=0.8.0"
cargo-nextest = "=0.9.93"
dprint = "=0.49.0"
probe-rs-tools = "=0.27.0"
wasm-bindgen-cli = "=0.2.100"
wasm-opt = "=0.116.1"

[patch.crates-io]
ssd1306 = { git = "https://github.com/rust-embedded-community/ssd1306.git", rev = "f3a2f7aca421fbf3ddda45ecef0dfd1f0f12330e" }

[profile.dev.package.esp-storage]
opt-level = 3

[profile.dev.package.esp-wifi]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
debug = 2

[workspace.lints.rust]
absolute-paths-not-starting-with-crate = "warn"
deprecated-in-future = "warn"
missing-debug-implementations = "warn"
single-use-lifetimes = "warn"
static-mut-refs = "deny"
trivial-casts = "warn"
unsafe-op-in-unsafe-fn = "forbid"

[workspace.lints.clippy]
alloc_instead_of_core = "warn"
as_underscore = "deny"
cast_lossless = "warn"
cloned_instead_of_copied = "warn"
empty_drop = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
host_endian_bytes = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
ignored_unit_patterns = "warn"
implicit_clone = "warn"
inconsistent_struct_constructor = "warn"
manual_is_power_of_two = "warn"
manual_let_else = "warn"
map_with_unused_argument_over_ranges = "warn"
match_same_arms = "warn"
mismatching_type_param_order = "warn"
non_zero_suggestions = "warn"
redundant_closure_for_method_calls = "warn"
ref_option = "warn"
renamed_function_params = "deny"
self_named_module_files = "warn"
semicolon_if_nothing_returned = "warn"
semicolon_inside_block = "warn"
semicolon_outside_block = "warn"
separated_literal_suffix = "warn"
string_to_string = "warn"
undocumented_unsafe_blocks = "warn"
uninlined_format_args = "warn"
unnecessary_literal_bound = "warn"
unused_trait_names = "warn"
used_underscore_items = "warn"
wildcard_imports = "warn"
