[package]
name = "vertx-api"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
bincode = { version = "2.0.0-rc.3", features = ["derive"], default-features = false }
embassy-futures = "0.1.1"
log = "0.4.21"
picoserve = { workspace = true }

[dev-dependencies]
picoserve = { workspace = true, features = ["tokio"] }
rand = "0.8.5"
tokio = { version = "1.37.0", features = ["macros", "net", "rt", "sync", "time"] }
tracing-subscriber = "0.3.18"
