[package]
name = "vertx-api"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
embassy-futures = "0.1.1"
log = "0.4.21"
picoserve = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true, features = ["derive"] }
vertx-config = { workspace = true }

[dev-dependencies]
picoserve = { workspace = true, features = ["tokio"] }
rand = "0.8.5"
tokio = { workspace = true, features = ["macros", "net", "rt", "sync", "time"] }
tracing-subscriber = "0.3.18"
