[package]
name = "vertx-backpack-ipc"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
postcard = { workspace = true }
serde = { workspace = true, features = ["alloc", "derive"] }
vertx-server = { workspace = true, features = ["serde"] }

[lints]
workspace = true
