[package]
name = "vertx-backpack-ipc"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["alloc", "derive"] }
vertx-network = { workspace = true, features = ["serde"] }

[lints]
workspace = true
