[package]
name = "vertx-backpack"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
chip-esp = [
    "dep:esp-alloc",
    "dep:esp-backtrace",
    "dep:esp-hal",
    "dep:esp-hal-embassy",
    "dep:esp-println",
    "dep:vertx-network-esp",
]
chip-esp32 = [
    "chip-esp",
    "esp-backtrace/esp32",
    "esp-hal/esp32",
    "esp-hal-embassy/esp32",
    "esp-println/esp32",
    "vertx-network-esp/chip-esp32",
]
chip-esp32c3 = [
    "chip-esp",
    "esp-backtrace/esp32c3",
    "esp-hal/esp32c3",
    "esp-hal-embassy/esp32c3",
    "esp-println/esp32c3",
    "vertx-network-esp/chip-esp32c3",
]
chip-esp32s3 = [
    "chip-esp",
    "esp-backtrace/esp32s3",
    "esp-hal/esp32s3",
    "esp-hal-embassy/esp32s3",
    "esp-println/esp32s3",
    "vertx-network-esp/chip-esp32s3",
]

[dependencies]
embassy-executor = { workspace = true }
embassy-sync = { workspace = true }
embassy-time = { workspace = true, features = ["generic-queue-8"] }
loog = { workspace = true, features = ["log"] }
postcard = { workspace = true }
static_cell = { workspace = true }
vertx-backpack-ipc = { workspace = true }
vertx-network = { workspace = true }
vertx-server = { workspace = true }

# chip-esp
esp-alloc = { workspace = true, optional = true }
esp-backtrace = { workspace = true, features = ["colors", "panic-handler", "exception-handler", "println"], optional = true }
esp-hal = { workspace = true, optional = true }
esp-hal-embassy = { workspace = true, features = ["executors"], optional = true }
esp-println = { workspace = true, features = ["log", "uart", "critical-section", "colors"], optional = true }
vertx-network-esp = { workspace = true, optional = true }

[[bin]]
name = "vertx-backpack"
required-features = ["chip-esp"]

[lints]
workspace = true
