[package]
name = "vertx-backpack"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
chip-esp = [
    "dep:esp-alloc",
    "dep:esp-backtrace",
    "dep:esp-hal",
    "dep:esp-hal-embassy",
    "dep:vertx-network-esp",
]
chip-esp32 = [
    "chip-esp",
    "esp-backtrace/esp32",
    "esp-hal/esp32",
    "esp-hal-embassy/esp32",
    "vertx-network-esp/chip-esp32",
]
chip-esp32c3 = [
    "chip-esp",
    "esp-backtrace/esp32c3",
    "esp-hal/esp32c3",
    "esp-hal-embassy/esp32c3",
    "vertx-network-esp/chip-esp32c3",
]
chip-esp32s3 = [
    "chip-esp",
    "esp-backtrace/esp32s3",
    "esp-hal/esp32s3",
    "esp-hal-embassy/esp32s3",
    "vertx-network-esp/chip-esp32s3",
]

[dependencies]
defmt-rtt = { workspace = true }
embassy-executor = { workspace = true }
embassy-sync = { workspace = true }
embassy-time = { workspace = true, features = ["generic-queue-8"] }
loog = { workspace = true, features = ["defmt"] }
postcard = { workspace = true, features = ["use-defmt"] }
static_cell = { workspace = true }
vertx-backpack-ipc = { workspace = true }
vertx-network = { workspace = true }
vertx-server = { workspace = true }

# chip-esp
esp-alloc = { workspace = true, optional = true }
esp-backtrace = { workspace = true, features = ["defmt", "colors", "panic-handler", "exception-handler"], optional = true }
esp-hal = { workspace = true, optional = true }
esp-hal-embassy = { workspace = true, features = ["executors"], optional = true }
vertx-network-esp = { workspace = true, features = ["defmt"], optional = true }

[[bin]]
name = "vertx-backpack"
required-features = ["chip-esp"]

[lints]
workspace = true
