[package]
name = "vertx-config-macros"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
proc-macro-crate = "3.1.0"
proc-macro-error = "1.0.4"
proc-macro2 = "=1.0.86"
quote = { workspace = true }
syn = { version = "=2.0.72", default-features = false, features = ["derive", "parsing", "printing", "proc-macro"] }
