[package]
name = "vertx-config-macros"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
proc-macro-crate = "=3.2.0"
proc-macro-error = "=1.0.4"
proc-macro2 = "=1.0.86"
quote = "=1.0.37"
syn = { version = "=2.0.79", default-features = false, features = ["derive", "parsing", "printing", "proc-macro"] }
