[package]
name = "vertx-network-esp"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
chip-esp32 = [
    "esp-hal/esp32",
    "esp-wifi/esp32",
]
chip-esp32c3 = [
    "esp-hal/esp32c3",
    "esp-wifi/esp32c3",
]
chip-esp32s3 = [
    "esp-hal/esp32s3",
    "esp-wifi/esp32s3",
]

[dependencies]
embassy-executor = { workspace = true, features = ["nightly"] }
embassy-net = { workspace = true, features = ["log", "dhcpv4", "dhcpv4-hostname", "udp"] }
embassy-time = { workspace = true }
esp-hal = { workspace = true, features = ["async"] }
esp-wifi = { version = "=0.7.1", features = ["wifi", "embassy-net"] }
log = { workspace = true }
vertx-network = { workspace = true }

[lints]
workspace = true
