[package]
name = "vertx-network-esp"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
defmt = ["esp-wifi/defmt"]

chip-esp32 = [
    "esp-hal/esp32",
    "esp-wifi/esp32",
]
chip-esp32c3 = [
    "esp-hal/esp32c3",
    "esp-wifi/esp32c3",
]
chip-esp32s3 = [
    "esp-hal/esp32s3",
    "esp-wifi/esp32s3",
]

[dependencies]
embassy-executor = { workspace = true, features = ["nightly"] }
embassy-net = { workspace = true, features = ["dhcpv4", "dhcpv4-hostname", "udp"] }
embassy-time = { workspace = true }
esp-hal = { workspace = true }
esp-wifi = { version = "=0.12.0", features = ["wifi"] }
loog = { workspace = true }
static_cell = { workspace = true }
vertx-network = { workspace = true }

[lints]
workspace = true
