[package]
name = "vertx-network"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
serde = ["dep:serde", "heapless/serde"]

[dependencies]
embassy-net-driver = "=0.2.0"
heapless = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }

[lints]
workspace = true
