[package]
name = "vertx-network"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
embassy-net-driver = "=0.2.0"
heapless = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive", "alloc"] }

[lints]
workspace = true
