[package]
name = "vertx-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
std = ["picoserve/std"]

[dependencies]
edge-dhcp = "=0.3.0"
embassy-futures = { workspace = true }
embassy-net = { workspace = true, features = ["log", "dhcpv4", "dhcpv4-hostname", "udp"] }
embassy-time = { workspace = true }
heapless = { workspace = true }
log = { workspace = true }
picoserve = { version = "=0.12.2", features = ["embassy"] }
vertx-network = { workspace = true }

[build-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = "=1.0.128"

[lints]
workspace = true
