[package]
name = "vertx-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
atoi = { version = "=2.0.0", default-features = false }
edge-dhcp = "=0.3.0"
embassy-net = { workspace = true, features = ["log", "dhcpv4", "dhcpv4-hostname", "tcp", "udp"] }
embassy-time = { workspace = true }
embedded-io-async = { workspace = true }
heapless = { workspace = true }
httparse = { version = "=1.9.5", default-features = false }
itoa = "=1.0.11"
log = { workspace = true }
vertx-network = { workspace = true }

[build-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = "=1.0.128"

[lints]
workspace = true
