[package]
name = "vertx-simulator"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
relm4 = { version = "=0.9.0", features = ["libadwaita", "gnome_45"] }
relm4-icons = { version = "=0.8.3", features = ["icon-development-kit"] }
tokio = { workspace = true, features = ["macros", "io-util", "process"] }
vertx-simulator-ipc = { workspace = true }

[lints]
workspace = true
