[package]
name = "vertx-simulator"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
futures-util = "=0.3.30"
postcard = { workspace = true, features = ["use-std"] }
relm4 = { version = "=0.9.0", features = ["libadwaita", "gnome_45"] }
relm4-icons = { version = "=0.9.0", features = ["icon-development-kit"] }
tokio = { workspace = true, features = ["macros", "io-util", "process"] }
tokio-tungstenite = "=0.23.1"
tokio-util = "=0.7.11"
vertx-backpack-ipc = { workspace = true }
vertx-simulator-ipc = { workspace = true }

[lints]
workspace = true
