[package]
name = "vertx"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
log = [
    "loog/log",
    "block-device-adapters?/log",
    "embassy-net?/log",
    "embedded-fatfs/log",
    "sdspi?/log",
]
defmt = [
    "loog/defmt",
    "block-device-adapters?/defmt",
    "embassy-net?/defmt",
    "embedded-fatfs/defmt",
    "embedded-graphics/defmt",
    "postcard/use-defmt",
    "sdspi?/defmt",
]

display-ssd1306 = ["dep:ssd1306"]

configurator = []

network = [
    "configurator",
    "dep:atoi",
    "dep:edge-dhcp",
    "dep:embassy-net",
    "dep:faster-hex",
    "dep:httparse",
    "dep:itoa",
]

storage-sd = [
    "dep:block-device-adapters",
    "dep:sdspi",
]

chip-esp = [
    "defmt",
    "network",
    "storage-sd",
    "dep:esp-alloc",
    "dep:esp-backtrace",
    "dep:esp-hal",
    "dep:esp-hal-embassy",
    "dep:esp-storage",
    "dep:esp-wifi",
]
chip-esp32s3 = [
    "chip-esp",
    "esp-backtrace/esp32s3",
    "esp-hal/esp32s3",
    "esp-hal-embassy/esp32s3",
    "esp-storage/esp32s3",
    "esp-wifi/esp32s3",
]

chip-rp = [
    "defmt",
    "storage-sd",
    "dep:cortex-m-rt",
    "dep:embassy-rp",
    "dep:embedded-alloc",
    "dep:fixed",
    "dep:fixed-macro",
    "dep:panic-probe",
    "dep:pio",
    "embassy-executor/arch-cortex-m",
    "embassy-executor/executor-thread",
]
chip-rp2040 = [
    "chip-rp",
    "embassy-rp/rp2040",
]

# chip-stm = []
# chip-stm32f407 = [
#   "chip-stm",
#   "dep:stm32f4xx-hal",
#   "stm32f4xx-hal/stm32f407",
# ]

simulator = [
    "log",
    "configurator",
    "embassy-executor/arch-wasm",
    "embassy-executor/executor-thread",
    "embassy-time/wasm",
]

[dependencies]
aligned = "=0.4.2"
bytemuck = { version = "=1.22.0", features = ["const_zeroed", "extern_crate_alloc", "min_const_generics"] }
const_format = "=0.2.34"
defmt-rtt = "=0.4.2"
delegate = "=0.13.3"
display-interface = "=0.5.0"
embassy-executor = { version = "=0.7.0", features = ["nightly"] }
embassy-futures = "=0.1.1"
embassy-sync = "=0.6.2"
embassy-time = { version = "=0.4.0", features = ["generic-queue-8"] }
embedded-fatfs = { git = "https://github.com/MabezDev/embedded-fatfs.git", rev = "4d2a2dbf85ede27c4b3190ded3ab61b700e8e76c", default-features = false }
embedded-graphics = "=0.8.1"
embedded-hal = "=1.0.0"
embedded-hal-async = "=1.0.0"
embedded-hal-bus = { version = "=0.3.0", features = ["async"] }
embedded-io-async = { version = "=0.6.1", features = ["defmt-03"] }
embedded-mogeefont = "=0.1.0"
embedded-text = "=0.7.2"
fugit = "=0.3.7"
heapless = { workspace = true, features = ["serde"] }
loog = { workspace = true }
portable-atomic = { version = "=1.11.0", features = ["critical-section"] }
postcard = { workspace = true }
qrcodegen-no-heap = "=1.8.1"
serde = { workspace = true, features = ["derive", "alloc"] }
static_cell = "=2.1.0"

# displays
ssd1306 = { version = "=0.10.0", features = ["async"], optional = true }

# network
atoi = { version = "=2.0.0", default-features = false, optional = true }
edge-dhcp = { version = "=0.5.0", optional = true }
embassy-net = { version = "=0.6.0", features = ["dhcpv4", "dhcpv4-hostname", "tcp", "udp"], optional = true }
faster-hex = { version = "=0.10.0", default-features = false, optional = true }
httparse = { version = "=1.10.1", default-features = false, optional = true }
itoa = { version = "=1.0.15", optional = true }

# storage-sd
block-device-adapters = { git = "https://github.com/MabezDev/embedded-fatfs.git", rev = "4d2a2dbf85ede27c4b3190ded3ab61b700e8e76c", optional = true }
sdspi = { git = "https://github.com/MabezDev/embedded-fatfs.git", rev = "4d2a2dbf85ede27c4b3190ded3ab61b700e8e76c", optional = true }

# chip-esp
esp-alloc = { version = "=0.7.0", optional = true }
esp-backtrace = { version = "=0.15.1", features = ["defmt", "colors", "panic-handler", "exception-handler"], optional = true }
esp-hal = { version = "=0.23.1", optional = true }
esp-hal-embassy = { version = "=0.7.0", default-features = false, features = ["executors"], optional = true }
esp-storage = { version = "=0.5.0", features = ["low-level", "storage", "critical-section"], optional = true }
esp-wifi = { version = "=0.13.0", features = ["defmt", "wifi"], optional = true }

# chip-rp
# TODO: flip-link
cortex-m-rt = { version = "=0.7.5", optional = true }
embassy-rp = { version = "=0.4.0", features = ["defmt", "critical-section-impl", "time-driver"], optional = true }
embedded-alloc = { version = "=0.6.0", optional = true }
fixed = { version = "=1.29.0", optional = true }
fixed-macro = { version = "=1.2.0", optional = true }
panic-probe = { version = "=0.3.2", features = ["print-defmt"], optional = true }
pio = { version = "=0.2.1", optional = true }

[target.wasm32-unknown-unknown.dependencies]
console_error_panic_hook = "0.1.7"
critical-section = { version = "=1.2.0", features = ["std"] }
talc = "=4.4.2"
wasm-bindgen = "=0.2.100"
wasm-logger = "=0.2.0"

[build-dependencies]
basic-toml = "=0.1.9"
serde = { workspace = true, features = ["derive"] }
serde_json = "=1.0.139"

[[bin]]
name = "vertx"
required-features = ["defmt"]

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = [
    "cortex-m-rt", # used by #[embassy-rp::main]
]
