[package]
name = "vhs-api"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
bincode = { version = "2.0.0-rc.3", features = ["derive"], default-features = false }
embassy-futures = "0.1.1"
log = "0.4.20"
picoserve = { workspace = true }

[dev-dependencies]
tokio = { version = "1.36.0", features = ["macros", "net", "rt", "sync", "time"] }
picoserve = { version = "*", features = ["tokio"] }
